index.html modifyed

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <header>
       <nav>
-        <a href="./">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="./">Студія</a>
+            <a href="./index.html">Студія</a>
           </li>
           <li>
             <a href="#">Портфоліо</a>
@@ -33,33 +33,35 @@
     </header>
     <main>
       <section>
-        <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        <h1>ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
+      <!--прихований заголовок наші переваги-->
+      <h2>наші переваги</h2>
       <section>
         <ul>
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3>Увага до деталей</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3>Пунктуальність</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3>Планування</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3>Сучасні техглдлгії</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -73,21 +75,21 @@
           <li>
             <img
               src="./images/tablet_and_keyboard.jpg"
-              alt="man is typing on the keyboard"
+              alt="чоловік друкує на клавіатурі, яка розташована біля планшета"
               width="370"
             />
           </li>
           <li>
             <img
               src="./images/laptop_and_smartphon.jpg"
-              alt="woomen is waching on the smarthpon and typing on the laptop"
+              alt="жінка на ноутбуці створює додаток до смартфона"
               width="370"
             />
           </li>
           <li>
             <img
               src="./images/graphic_tablet.jpg"
-              alt="smb iswathing on the grahpic tablet"
+              alt="хтось створює проект на графічному планшеті"
               width="370"
             />
           </li>
@@ -98,8 +100,8 @@
         <ul>
           <li>
             <img
-              src="./images/Igor_Dem.jpg"
-              alt="Igor_Demyanenko"
+              src="./images/Igor_Demyanenko.jpg"
+              alt="Ігор Дем'яненко"
               width="270"
             />
             <h3>Ігор Дем'яненко</h3>
@@ -108,7 +110,7 @@
           <li>
             <img
               src="./images/Olga_Ryepina.jpg"
-              alt="Olga_Ryepina"
+              alt="Ольга Рєпіна"
               width="270"
             />
             <h3>Ольга Рєпіна</h3>
@@ -117,7 +119,7 @@
           <li>
             <img
               src="./images/Mykola_Tarasov.jpg"
-              alt="Mykola_Tarasov"
+              alt="Микола Тарасов"
               width="270"
             />
             <h3>Микола Тарасов</h3>
@@ -125,8 +127,8 @@
           </li>
           <li>
             <img
-              src="./images/Myhaylo_Yermak.jpg"
-              alt="Myhaylo_Yermak"
+              src="./images/Myhaylo_Yermakov.jpg"
+              alt="Михайло Єрмаков"
               width="270"
             />
             <h3>Михайло Єрмаков</h3>
@@ -136,10 +138,18 @@
       </section>
     </main>
     <footer>
-      <a href="./">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
         <ul>
-          <li>м. Київ, пр-т Лесі Українки, 26</li>
+          <li>
+            <a
+              href="htpps:goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
