--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <ul>
           <li>
             <img
-              src="./images/Igor_Demyanenko.jpg"
+              src="./images/igor_demyanenko.jpg"
               alt="Ігор Дем'яненко"
               width="270"
             />
@@ -109,7 +109,7 @@
           </li>
           <li>
             <img
-              src="./images/Olga_Ryepina.jpg"
+              src="./images/olga_ryepina.jpg"
               alt="Ольга Рєпіна"
               width="270"
             />
@@ -118,7 +118,7 @@
           </li>
           <li>
             <img
-              src="./images/Mykola_Tarasov.jpg"
+              src="./images/mykola_tarasov.jpg"
               alt="Микола Тарасов"
               width="270"
             />
@@ -127,7 +127,7 @@
           </li>
           <li>
             <img
-              src="./images/Myhaylo_Yermakov.jpg"
+              src="./images/myhaylo_yermakov.jpg"
               alt="Михайло Єрмаков"
               width="270"
             />
