--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <li>
             <img
               src="./images/igor_demyanenko.jpg"
-              alt="Ігор Дем'яненко"
+              alt="ігор дем'яненко"
               width="270"
             />
             <h3>Ігор Дем'яненко</h3>
@@ -110,7 +110,7 @@
           <li>
             <img
               src="./images/olga_ryepina.jpg"
-              alt="Ольга Рєпіна"
+              alt="ольга рєпіна"
               width="270"
             />
             <h3>Ольга Рєпіна</h3>
@@ -119,7 +119,7 @@
           <li>
             <img
               src="./images/mykola_tarasov.jpg"
-              alt="Микола Тарасов"
+              alt="микола тарасов"
               width="270"
             />
             <h3>Микола Тарасов</h3>
@@ -128,7 +128,7 @@
           <li>
             <img
               src="./images/myhaylo_yermakov.jpg"
-              alt="Михайло Єрмаков"
+              alt="михайло єрмаков"
               width="270"
             />
             <h3>Михайло Єрмаков</h3>
